--- a/FernetVol2.css
+++ b/FernetVol2.css
@@ -65,3 +65,11 @@ h1, h2, h3, h4{
     background-color: #8d99ae;
     
 }
+
+.dialogBox{
+    width: 290px;
+    height: auto;
+    border: 2px solid grey;
+    border-right: 2px solid black ;
+    border-bottom: 2px solid black;
+}
