--- a/FernetVol2.css
+++ b/FernetVol2.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4{
 .tutorial{
     width: 450px;
     margin: auto;
-    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
     display: flex;
     border: 2px solid grey;
