--- a/FernetVol2.css
+++ b/FernetVol2.css
@@ -112,3 +112,21 @@ h1, h2, h3, h4{
     border: none;
 
 }
+
+#result{
+     opacity: 1;
+     position: absolute;
+    width: 450px;
+    background-color: #2b2d42;
+    color: #f5ebe0;
+    text-shadow: 0px 0px 30px black;
+    border: 3px solid black;
+    border-radius: 5px;
+}
+
+
+footer{
+    text-align: start;
+    font-size: small;
+    color: #9b9dad;
+}
