--- a/FernetVol2.css
+++ b/FernetVol2.css
@@ -20,6 +20,21 @@ h1, h2, h3, h4{
     border-radius: 50%;
 }
 
+.cartel{
+    margin-top: 25px;
+    margin-bottom: 50px;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: 10% repeat(2, 40%) 10%;
+    grid-template-rows: repeat(3, 100px);
+    grid-template-areas: 
+    ". video wiki ."
+    ". video cat ."
+    ". video . .";
+    gap: 15px;
+}
+
 .tutorial{
     width: 450px;
     margin: auto;
@@ -31,7 +46,45 @@ h1, h2, h3, h4{
     border-bottom: 2px solid black;
     border-radius: 5px;
     padding: 5px;
+    flex-direction: column;
     justify-content: center;
+    align-content: center;
+}
+
+.tutorial iframe{
+    width: 450px;
+    height: 340px;
+    justify-self: center;
+}
+
+.tutorial1{
+    width: 450px;
+    height: 90px;
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    border: 2px solid grey;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    border-radius: 5px;
+    justify-content: center;
+    align-content: center;
+}
+
+#video{
+    grid-area: video;
+    grid-column: 2/3;
+}
+
+#wiki{
+    grid-area: wiki;
+    grid-column: 3/4;
+}
+
+#tiposDeGatos{
+    grid-area: cat;
+    grid-column: 3/4;
+    grid-row: 2/3;
 }
 
 .frn{
@@ -88,6 +141,7 @@ h1, h2, h3, h4{
     border-right: 2px solid black ;
     border-bottom: 2px solid black;
 }
+
 .cat{
     display: flex;
     justify-content: end;
@@ -101,11 +155,10 @@ h1, h2, h3, h4{
     border: 2px solid grey;
     border-right: 2px solid black;
     border-bottom: 2px solid black;
-    filter: drop-shadow(5px 5px 5px black);
     padding: 2px;
     margin-left: auto;
-    
 }
+
 
 .kiti:hover{
     filter: drop-shadow(0px 0px 5px rgb(208, 243, 13));
@@ -157,6 +210,10 @@ h1, h2, h3, h4{
     padding: 15px;
     filter: drop-shadow(5px 5px 15px black);
     text-align: start;
+}
+
+.time{
+    margin-top: 150px;
 }
 
 footer{
